// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cars | Core / LevelIndicator Level 0 1`] = `
<div
  className="level-indicator "
>
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal level-indicator__led"
  />
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal level-indicator__led"
  />
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal level-indicator__led"
  />
</div>
`;

exports[`Storyshots Cars | Core / LevelIndicator Level 1 1`] = `
<div
  className="level-indicator "
>
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal led-indicator--enabled level-indicator__led"
  />
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal level-indicator__led"
  />
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal level-indicator__led"
  />
</div>
`;

exports[`Storyshots Cars | Core / LevelIndicator Level 2 1`] = `
<div
  className="level-indicator "
>
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal led-indicator--enabled level-indicator__led"
  />
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal led-indicator--enabled level-indicator__led"
  />
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal level-indicator__led"
  />
</div>
`;

exports[`Storyshots Cars | Core / LevelIndicator Level 3 1`] = `
<div
  className="level-indicator "
>
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal led-indicator--enabled level-indicator__led"
  />
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal led-indicator--enabled level-indicator__led"
  />
  <span
    className="led-indicator led-indicator--color-blue led-indicator--size-normal led-indicator--enabled level-indicator__led"
  />
</div>
`;
